# unix_file_tree_generator

./: .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml
.rcfiles/: .pydocstylerc  .pylintrc
src/: main.py
